# lucrezio_spme

./: CMakeLists.txt  README.md  package.xml
msg/: ImageBoundingBox.msg
src/: CMakeLists.txt
src/core/: CMakeLists.txt  detection.cpp  object.cpp  object.h
src/exploration/: CMakeLists.txt  explorator.cpp  explorator.h
src/mapping/: CMakeLists.txt  base_mapper.cpp  base_mapper.h  mapper.cpp  mapper.h  object.cpp  object.h  semantic_map.cpp  semantic_map.h  semantic_mapper.cpp  semantic_mapper.h  semantic_mapper_node.cpp  semantic_mapper_node.h  semantic_mapper_node_app.cpp
src/perception/: CMakeLists.txt  base_detector.h  detection.h  detector.cpp  detector.h  logical_detector.cpp  logical_detector.h  logical_detector_node.cpp  logical_detector_node.h  logical_detector_node_app.cpp  model.h
src/semantic_map/: CMakeLists.txt  object.h  semantic_map.h
src/types/: CMakeLists.txt  detection.h  detection.hpp  detection.hpp~  object.h  object.hpp  object.hpp~  semantic_map.cpp  semantic_map.h  semantic_map.h~  types.hpp  types.hpp~
